made improvements to the nav panel and started the info panel

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thrawn</title>
+    <title>Grand Admiral Thrawn</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
         <input type="search" id="search" placeholder="A long time ago, in a galexy far, far away...">
 
         <div id="charactersDropdown">
-            <button id="characterButton">Characters</button>
+            <p id="characterButton">Characters</p>
             <div id="characterOptions">
                 <a href="" class="dropdownCharacterOption">Jedi</a>
                 <a href="" class="dropdownCharacterOption">Sith</a>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div id="mediaDropdown">
-            <button id="mediaButton">Media</button>
+            <p id="mediaButton">Media</p>
             <div id="mediaOptions">
                 <a href="" class="dropdownMediaOption">Movies</a>
                 <a href="" class="dropdownMediaOption">Shows</a>
@@ -39,6 +39,13 @@
         </div>
 
     </div>
+
+<div id="infoPanel">
+    <div id="photoContainer">
+        <img src="photos/profilePicture.png" id="profilePhoto" alt="Thrawn">
+        <h1 id="name">Grand Admiral Thrawn </h1>
+    </div>
+</div>
 
 </body>
 </html>
