got the info panel looking how i want. just need to make it flex correctly

--- a/index.html
+++ b/index.html
@@ -41,10 +41,40 @@
     </div>
 
 <div id="infoPanel">
-    <div id="photoContainer">
+    <div id="profilePhotoContainer">
         <img src="photos/profilePicture.png" id="profilePhoto" alt="Thrawn">
         <h1 id="name">Grand Admiral Thrawn </h1>
     </div>
+
+    <div id="infoContainer">
+        <div id="infoButtons">
+            <p id="infoButtonOne">Appearance</p>
+            <p id="infoButtonTwo">Background</p>
+            <p id="infoButtonThree">Affiliation</p>
+        </div>
+        <div id="textAndPhoto">
+            <div id="infoTxt">
+                <div id="catagories">
+                    <p id="born">Born:</p>
+                    <p id="homeWorld">Homeworld:</p>
+                    <p id="family">Family:</p>
+                </div>
+                <div id="answers">
+                    <p id="bornAnswer">59 bby</p>
+                    <p id="homeWorldAnswer">Csilla</p>
+                    <ul id="familyList">
+                        <li class="familyMember">Thrass (brother)</li>
+                        <li class="familyMember">The Mitth family (Adopted)</li>
+                        <li class="familyMember">blood family (Biological)</li>
+                    </ul>
+                </div>
+            </div>
+            <div id="infoPhotoContainer">
+                <img src="photos/csilla.png" id="infoPic" alt="placeholder">
+            </div>
+        </div>
+    </div>
+
 </div>
 
 </body>
