finished the basic layout

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <p id="MentionedButton">Mention Only</p>
             </div>
 
-            <div id="appearancesNavigationBarContainer">
+            <div id="appearancesNavigationContainer">
                 <img src="photos/csilla.png" alt="" class="PreviousPage">
                 <p id="appearancePageNumber">1</p>
                 <img src="photos/logo.png" alt="" class="nextPage">
@@ -121,27 +121,17 @@
 
             <div id="appearancesPostersContainer">
                 <a href="">
-                    <img src="" id="posterOne" alt="">
+                    <img src="photos/Media1.jpg" id="posterOne" alt="">
                 </a>
                 <a href="">
-                    <img src="" id="posterTwo" alt="">
+                    <img src="photos/Media2.jpg" id="posterTwo" alt="">
                 </a>
                 <a href="">
-                    <img src="" id="posterThree" alt="">
+                    <img src="photos/Media3.jpg" id="posterThree" alt="">
                 </a>
-                <a href="">
-                    <img src="" id="posterFour" alt="">
-                </a>
-                <a href="">
-                    <img src="" id="posterFive" alt="">
-                </a>
-                <a href="">
-                    <img src="" id="posterSix" alt="">
-                </a>
-            </div>
 
         </div>
-        
+
     </div>
 
     
