added dropdown menus for the main content/started working on the adjusting display

--- a/index.html
+++ b/index.html
@@ -83,9 +83,35 @@
 
         <div id="bioContainer">
             <div id="bioButtons">
+
+            <div id="personalityDropdown">
                 <p id="bioButtonOne">Personality</p>
+                <div id="personalityOptions">
+                    <a href="" class="dropdownPersonalityOptions">Command Style</a>
+                    <a href="" class="dropdownPersonalityOptions">Technique</a>
+                    <a href="" class="dropdownPersonalityOptions">Political Views</a>
+                    <a href="" class="dropdownPersonalityOptions">Legacy</a>
+                </div>
+
+                </div>
+
+                <div id="bioDropdown">
                 <p id="bioButtonTwo">Biography</p>
+                <div id="bioOptions">
+                    <a href="" class="dropdownBioOptions">Origins</a>
+                    <a href="" class="dropdownBioOptions">Imperial Service</a>
+                    <a href="" class="dropdownBioOptions">Counter-Insurgency</a>
+                    <a href="" class="dropdownBioOptions">Heir To The Empire</a>
+                </div>
+
+                </div>
+
+                <div id="btsContainer">
                 <p id="bioButtonThree">Behind The Scenes</p>
+                <div id="behindTheScenes">
+                </div>
+                    
+                </div>
             </div>
 
             <div id="mainBioContent">
@@ -134,6 +160,5 @@
 
     </div>
 
-    
 </body>
 </html>
