basic javascript for page done

--- a/index.html
+++ b/index.html
@@ -174,22 +174,38 @@
                 <p id="MentionedButton">Mention Only</p>
             </div>
 
-            <div id="appearancesNavigationContainer">
-                <img src="photos/csilla.png" alt="" class="PreviousPage">
-                <p id="appearancePageNumber">1</p>
-                <img src="photos/logo.png" alt="" class="nextPage">
-            </div>
+         
 
             <div id="appearancesPostersContainer">
-                <a href="">
-                    <img src="photos/Media1.jpg" id="posterOne" alt="">
-                </a>
-                <a href="">
-                    <img src="photos/Media2.jpg" id="posterTwo" alt="">
-                </a>
-                <a href="">
-                    <img src="photos/Media3.jpg" id="posterThree" alt="">
-                </a>
+
+                <div id="appearances">
+                    <a href="">
+                        <img src="photos/Media1.jpg" class="poster" alt="">
+                    </a>
+                    <a href="">
+                        <img src="photos/Media2.jpg" class="poster" alt="">
+                    </a>
+                    <a href="">
+                        <img src="photos/Media3.jpg" class="poster" alt="">
+                    </a>
+                    <a href="">
+                        <img src="photos/ghosts.jpg" class="poster" alt="">
+                    </a>
+                    <a href="">
+                        <img src="photos/outBound.jpg" class="poster" alt="">
+                    </a>
+                </div>
+
+                <div id="mentions">
+                    <a href="">
+                        <img src="photos/mention1.jpg" class="poster" alt="">
+                    </a>
+                    <a href="">
+                        <img src="photos/mention2.jpg" class="poster" alt="">
+                    </a>
+                </div>
+
+                
 
         </div>
 
